  Howto:
  To export multiple SQL results right click or open tools popup (ctl+t) and choose "sql2file"
  on multiple SQL queries (separated by statement separators) to open the file export dialog.
  To export multiple SQL result UI tables execute multiple SQLs (ctrl+enter).
  Then right click one of the UI result tables to open the file export dialog.

Bug fixes:

Change tracking: Positioning of split slider in GIT revision dialog did not work.
  To open the GIT revisions dialog right click the SQL editor's left gutter.
  Note that the GIT revision dialog is available only when change tracking by GIT must be used.

Fixed NullPointerException when rerunning SQL result.

DB2 Plugin: Fixed trigger details for AS400.

Table cell data popup:
  Reformat button unintentionally triggered file export.

#1513 NullPointerException when SQL results were displayed as text.

Hibernate Plugin:
  HQL execution raised ClassNotFoundException if mapped plain value fields were not of JDK types.

Graph Plugin --> Query builder mode: Fixed double click selection in column text field.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/11 (once more)
  H2 Plugin: For H2 version 2.* the Plugin's way to access
  the databases internal information schema for index details was fixed.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/11
  H2 DB versions greater than 2.* didn't show indexes in the Object tree's index details tab.
  The reason was that H2 changed the table type of ordinary tables from "TABLE" from to "BASE TABLE".

Moving files raised "JGitInternalException: Entry not found by path: ..." error,
  when un-added files where moved inside a Git repository.
  Info: To move a file open the "Save as" dialog and check the check box on the lower left.

DB Diff Plugin: Database table compare dialog (right mouse click on table in Object tree) didn't work
  because of a version conflict concerning the JGoodies Forms library.