@@ -5,3 +5,7 @@ ColumnDiffDialog.sessionLabelPrefix=DB-
 TabularDiffPresentation.noDiffsMessage=No differences were detected
 
 JMeldDiffPresentation.table.diff=Database table DDL compare
+
+TabularDiffPresentation.number.of.dest.and.source.objects.mismatch=For tabular diffs the number of source and destination objects must match.\nConsider switching to side-by-side diff.
+
+TabularDiffPresentation.objects.type.mismatch=Types of source and destination objects don't match.\nConsider switching to side-by-side diff.
