@@ -23,21 +23,8 @@ import net.sourceforge.squirrel_sql.client.util.IOptionPanel;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
 
-import javax.swing.ButtonGroup;
-import javax.swing.JCheckBox;
-import javax.swing.JLabel;
-import javax.swing.JPanel;
-import javax.swing.JRadioButton;
-import javax.swing.JTextField;
-import javax.swing.SwingConstants;
-import javax.swing.border.Border;
-import javax.swing.border.CompoundBorder;
-import javax.swing.border.EmptyBorder;
-import javax.swing.border.TitledBorder;
-import java.awt.Component;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Insets;
+import javax.swing.*;
+import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 
@@ -68,8 +55,6 @@ public class DBDiffPreferencesPanel extends JPanel implements IOptionPanel
 
 	public DBDiffPreferencesPanel(IPluginPreferencesManager pluginPreferencesManager)
 	{
-
-		super();
 		this.pluginPreferencesManager = pluginPreferencesManager;
 		_prefs = (DBDiffPreferenceBean) pluginPreferencesManager.getPreferences();
 		createGUI();
@@ -79,48 +64,45 @@ public class DBDiffPreferencesPanel extends JPanel implements IOptionPanel
 	private void createGUI()
 	{
 		this.setLayout(new GridBagLayout());
-		final GridBagConstraints c = new GridBagConstraints();
-		c.gridx = 0; // Column 0
-		c.gridy = 0; // Row 0
-		c.fill = GridBagConstraints.BOTH;
-		c.weightx = 1;
-		c.weighty = .40;
-		add(createTopPanel(), c);
+		GridBagConstraints gbc;
+
+		gbc = new GridBagConstraints(0,0,1,1,0,0, GridBagConstraints.WEST, GridBagConstraints.NONE, new Insets(0,0,3,0), 0,0);
+		add(new JLabel(s_stringMgr.getString("DBDiffPreferencesPanel.configure.table.diff.presentation")), gbc);
+
+		gbc = new GridBagConstraints(0,1,1,1,0,0, GridBagConstraints.CENTER, GridBagConstraints.NONE, new Insets(0,0,0,0), 0,0);
+		add(createTopPanel(), gbc);
 
 	}
 
 	private JPanel createTopPanel()
 	{
-		final JPanel result = new JPanel(new GridBagLayout());
-		// i18n[DBDiffPreferencesPanel.presentationOptionsBorderLabel=Presentation Options]
-		final String tranferOptionsBorderLabel =
-			s_stringMgr.getString("DBDiffPreferencesPanel.presentationOptionsBorderLabel");
-		result.setBorder(getTitledBorder(tranferOptionsBorderLabel));
-		final String cbLabel =
-			s_stringMgr.getString("DBDiffPreferencesPanel.tabularPresentationRadioButtonLabel");
+		final JPanel ret = new JPanel(new GridBagLayout());
+		ret.setBorder(BorderFactory.createEtchedBorder());
+
+		final String cbLabel = s_stringMgr.getString("DBDiffPreferencesPanel.tabularPresentationRadioButtonLabel");
 		tabularPresentationRadioButton = new JRadioButton(cbLabel);
 
-		addSideBySidePresentationRadionButton(result, 0, 0);
+		addSideBySidePresentationRadioButton(ret, 0, 0);
 
 		final ButtonGroup tabularsidebyside = new ButtonGroup();
 		tabularsidebyside.add(tabularPresentationRadioButton);
 		tabularsidebyside.add(sideBySidePresentationRadioButton);
 
-		addInternalDiffWindowRadionButton(result, 0, 1);
-		addExternalDiffToolRadioButton(result, 0, 2);
+		addInternalDiffWindowRadionButton(ret, 0, 1);
+		addExternalDiffToolRadioButton(ret, 0, 2);
 
 		final ButtonGroup internalExternalButtonGroup = new ButtonGroup();
 		internalExternalButtonGroup.add(internalDiffWindowRadioButton);
 		internalExternalButtonGroup.add(externalDiffToolRadionButton);
 
-		addexternalDiffToolCommandLabel(result, 0, 3);
-		addExternalDiffToolCommandTextField(result, 1, 3);
+		addexternalDiffToolCommandLabel(ret, 0, 3);
+		addExternalDiffToolCommandTextField(ret, 1, 3);
 
-		addSortColumnsCheckBoxLabel(result, 0, 4);
+		addSortColumnsCheckBoxLabel(ret, 0, 4);
 		
-		addTabularPresentationRadioButton(result, 0, 5);
+		addTabularPresentationRadioButton(ret, 0, 5);
 
-		return result;
+		return ret;
 	}
 
 	private void addSortColumnsCheckBoxLabel(JPanel panel, int col, int row)
@@ -146,6 +128,7 @@ public class DBDiffPreferencesPanel extends JPanel implements IOptionPanel
 		c.gridx = col;
 		c.gridy = row;
 		c.gridwidth = 2; // Span across two columns
+		c.insets = new Insets(10, 0, 5, 0);
 		c.anchor = GridBagConstraints.WEST;
 		final String cbToolTipText =
 			s_stringMgr.getString("DBDiffPreferencesPanel.tabularPresentationRadioButtonToolTipText");
@@ -170,38 +153,35 @@ public class DBDiffPreferencesPanel extends JPanel implements IOptionPanel
 		panel.add(tabularPresentationRadioButton, c);
 	}
 
-	private void addSideBySidePresentationRadionButton(JPanel panel, int col, int row)
+	private void addSideBySidePresentationRadioButton(JPanel panel, int col, int row)
 	{
 		final GridBagConstraints c = new GridBagConstraints();
 		c.gridx = col;
 		c.gridy = row;
 		c.gridwidth = 2; // Span across two columns
-		c.insets = new Insets(10, 0, 0, 0);
+		c.insets = new Insets(5, 0, 0, 0);
 		c.anchor = GridBagConstraints.WEST;
-		final String cbLabelStr =
-			s_stringMgr.getString("DBDiffPreferencesPanel.sideBySidePresentationRadionButtonLabel");
-		final String toolTipText =
-			s_stringMgr.getString("DBDiffPreferencesPanel.sideBySidePresentationRadionButtonToolTip");
+		final String cbLabelStr = s_stringMgr.getString("DBDiffPreferencesPanel.sideBySidePresentationRadionButtonLabel");
+		final String toolTipText = s_stringMgr.getString("DBDiffPreferencesPanel.sideBySidePresentationRadionButtonToolTip");
 		sideBySidePresentationRadioButton = new JRadioButton(cbLabelStr);
 		sideBySidePresentationRadioButton.setToolTipText(toolTipText);
-		sideBySidePresentationRadioButton.addActionListener(new ActionListener()
-		{
-			public void actionPerformed(ActionEvent e)
-			{
-				if (e.getSource() == sideBySidePresentationRadioButton)
-				{
-					if (!internalDiffWindowRadioButton.isSelected() && !externalDiffToolRadionButton.isSelected())
-					{
-						internalDiffWindowRadioButton.setSelected(true);
-					}
-					internalDiffWindowRadioButton.setEnabled(true);
-					externalDiffToolRadionButton.setEnabled(true);
-					externalDiffToolCommandLabel.setEnabled(true);
-					externalDiffToolCommandTextField.setEnabled(true);
-				}
-			}
-		});
+		sideBySidePresentationRadioButton.addActionListener(e -> onRadSideBySide(e));
 		panel.add(sideBySidePresentationRadioButton, c);
+	}
+
+	private void onRadSideBySide(ActionEvent e)
+	{
+		if (e.getSource() == sideBySidePresentationRadioButton)
+		{
+			if (!internalDiffWindowRadioButton.isSelected() && !externalDiffToolRadionButton.isSelected())
+			{
+				internalDiffWindowRadioButton.setSelected(true);
+			}
+			internalDiffWindowRadioButton.setEnabled(true);
+			externalDiffToolRadionButton.setEnabled(true);
+			externalDiffToolCommandLabel.setEnabled(true);
+			externalDiffToolCommandTextField.setEnabled(true);
+		}
 	}
 
 	private void addExternalDiffToolRadioButton(JPanel panel, int col, int row)
@@ -292,13 +272,6 @@ public class DBDiffPreferencesPanel extends JPanel implements IOptionPanel
 			s_stringMgr.getString("DBDiffPreferencesPanel.externalDiffToolCommandToolTip");
 		externalDiffToolCommandTextField.setToolTipText(commitlabelToolTipText);
 		panel.add(externalDiffToolCommandTextField, c);
-	}
-
-	private Border getTitledBorder(String title)
-	{
-		final CompoundBorder border =
-			new CompoundBorder(new EmptyBorder(10, 10, 10, 10), new TitledBorder(title));
-		return border;
 	}
 
 	private void loadData()
