@@ -16,11 +16,12 @@ DBDiffPreferencesPanel.sideBySidePresentationRadionButtonToolTip=A form of compa
 DBDiffPreferencesPanel.sortColumnsForSideBySideComparisonLabel=Sort Columns for side-by-side comparison
 DBDiffPreferencesPanel.sortColumnsForSideBySideComparisonToolTip=Column ordering differences can be ignored with this preference.
 
-DBDiffPreferencesPanel.tabularPresentationRadioButtonLabel=Tabular
+DBDiffPreferencesPanel.tabularPresentationRadioButtonLabel=Tabular (Warning: Limited functionality, Side-by-Side Diff is preferable)
 DBDiffPreferencesPanel.tabularPresentationRadioButtonToolTipText=Shows differences in a table
 
 DBDiffPreferencesPanel.title=DB Diff
 
 
-
 DBDiffPreferencesPanel.presentationOptionsBorderLabel=Presentation Options
+
+DBDiffPreferencesPanel.configure.table.diff.presentation=Configure DB table diff presentation:
